# bubbl-py

./: .env  .env.template  .gitignore  bubbl.command  bubbl.py  main2.py  main8.py  pyproject.toml  readme.md  requirements.txt
src/: ai_services.py  cache.py  config.py  database.py  watcher.py
